--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -9,7 +9,9 @@
             padding: 10px;
             width: 135px;
             text-align: center;
-            background-color: white;
+            background-color: black;
+            text-decoration-color: beige;
         }
     }
 }
+
