--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -1,5 +1,23 @@
 .about-wrapper {
+    .home-buttons-wrapper {
+        display: flex;
+        justify-content: space-between;
+
+        a {
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 10px;
+            width: 135px;
+            text-align: center;
+            background-color: white;
+            
+        }
+    }
+}
+
+.about-wrapper > .about-paragraph {
     display: flex;
-    align-items: center;
-    align-content: space-between;
+    justify-content: space-between;
+    color: blue;
     background-color: black;
+}
