--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-    color: black;
+    color: orange;
     text-decoration: none;
 }
 
@@ -27,5 +27,5 @@ a {
 }
 
 .error {
-    color: red;
+    color: blue;
 }
