--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -9,8 +9,8 @@
             padding: 10px;
             width: 135px;
             text-align: center;
-            background-color: black;
-            text-decoration-color: beige;
+            background-color: white;
+            
         }
     }
 }
